--- a/config/config.json
+++ b/config/config.json
@@ -15,6 +15,6 @@
   },
   "production": {
     "dialect": "mysql",
-    "use_env_variable": "CLEARDB_DATABASE_URL"
+    "use_env_variable": "JAWSDB_URL"
   }
 }
